Refactors comment handling and improves image management
Enhances the handling of group and post comments by returning the created comment data upon successful submission.

Updates the image management process to ensure proper error handling and file management, improving robustness.

Consolidates the Dockerfile for SQLite database handling and optimizes the file copying process.

Removes unnecessary imports and improves code clarity in various components.

This update facilitates better user feedback and system resilience when dealing with comments and images.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,7 +19,7 @@ WORKDIR /root/
 RUN mkdir -p /pkg/db/sqlite
 COPY --from=stage1 /Backend/app .
 COPY --from=stage1 /Backend/pkg/db/migrations ./pkg/db/migrations
-COPY --from=stage1 /Backend/pkg/db/sqlite/social.db ./pkg/db/sqlite/social.db 
+COPY --from=stage1 /Backend/pkg/db/sqlite/ ./pkg/db/sqlite/
 EXPOSE 8080
 
 CMD ["./app"]
